[package]
name = "caplog"
version = "0.1.0"
authors = ["Alex-Addy"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Capture log messages for testing"
categories = ["development-tools::testing", "development-tools::debugging"]
repository = "https://github.com/Alex-Addy/caplog/"


[dependencies]
lazy_static = "1.4"
log = { version = "0.4", features = ["std"] }
